# realtime-ai

./: Dockerfile  README.en.md  README.md  app.py  config.py  mypy.ini  protocol.md  pyproject.toml  requirements.txt  session.py
models/: session.py
services/asr/: __init__.py  azure_asr.py  base.py
services/llm/: __init__.py  base.py  openai_llm.py
services/tts/: __init__.py  azure_tts.py  base.py  minimax_tts.py
services/websocket/: handler.py  pipeline.py
static/: index.html
static/css/: style.css
static/js/: app.js  audio-processor.js  ui.js  websocket-handler.js
tests/: conftest.py  test_app.py  test_config.py  test_session.py
tests/services/: test_asr_init.py  test_base.py  test_llm_init.py  test_tts_init.py
tests/utils/: test_audio.py  test_text.py
utils/: audio.py  http_client.py  security.py  text.py
websocket/: handler.py  models.py  pipeline.py
